<resources>
    <string name="app_name">Dro\'Tomat</string>

    <string name="subtitle">Guide Dro\'Tomat vers l\'arc-en-ciel</string>

    <string name="default_player_name">Joueur</string>

    <string name="launch_game_button">Jouer</string>
    <string name="launch_rules_button">Règles</string>
    <string name="launch_scores_button">Scores</string>
    <string name="launch_settings_button">Règlages</string>
    <string name="launch_credits_button">Crédits</string>

    <string name="back_button">Retour</string>

    <string name="game_over_title">NUL</string>
    <string name="game_over_your_score_is">Score : %1$d</string>
    <string name="game_over_your_highscore_is">Record personnel : %1$d</string>

    <string name="rules_title">Règles</string>
    <string name="rules_text">"Aide Dro\'Tomat à atteindre l\'arc-en-ciel sans tomber dans le vide !\n\n

Pour cela, Dro\'Tomat se déplace automatiquement.

En secouant la tablette, tu peux le faire sauter pour éviter de tomber dans les trous.

En masquant le capteur de luminosité, il change de direction.

Fait attention aux plateformes avec des pointillés, elles ne sont pas actives. Pour cela, tu dois appuyer sur l\'écran, mais cela en désactive d'autres."
    </string>

    <string name="scores_title">Scores</string>
    <string name="levels_title">Levels</string>

    <string name="settings_title">Règlages</string>
    <string name="settings_label_volume">Volume</string>
    <string name="settings_label_vibrations">Vibrations</string>

    <string name="restart_btn">Recommencer</string>

    <string name="credits_title">Crédits</string>
    <string name="credits_text">Projet réalisé lors du MOBE Challenge 2021 du Master Développement Logiciel de l\'Université Toulouse 3 Paul Sabatier.

        \n\nÉquipe Vacances\n\n

        ANDRE Nicolas\n
        DELCOURT Kévin\n
        FRANZESE Alessandra\n
        RODRIGUEZ Nils\n\n

        Encadrement\n\n

        DA COSTA Georges\n
        LIEVRE Mathieu\n\n

        - Images : FRANZESE Alessandra\n
        - Sons :\n
            Connum - https://freesound.org/s/12693/ \n
            SergeyIonov - https://freesound.org/s/467373/ \n
            razrox - https://freesound.org/s/197179/ \n
            Joao_Janz - https://freesound.org/s/482653/ \n
            Vilkas_Sound - https://freesound.org/s/460475/ \n
            old_waveplay - https://freesound.org/s/399934/ \n
            Sharka - Final Fantasy Victory Theme (FAIL RECORDER) http://www.mariopiano.com/
    </string>
</resources>